--- a/pos.html
+++ b/pos.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <h1>POS Demo</h1>
-        <p>Please note that this is in no way a complete POS system and is missing lots of important stuff such as EOD totals and cash management</p><br>
+        <p>Please note that this is in no way a complete POS system and is missing lots of important stuff such as EOD totals and cash management. The entire POS client is implemented in Javascript for this demonstration and it would likely be implemented natively if ever deployed. The unix socket is connected to through a basic PHP API as you can't send data over SSH from a browser.</p><br>
         <button id="saleB">Start Sale</button>
         <button id="lookB">Lookup By Customer</button>
         <button id="viewB">View Order</button>
