--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <h1>Prototype Point of Sale System</h1>
         <p>This system was developed over the course of a couple of days by Finlay Maroney. It is designed to avoid some of the issues encountered with existing solutions and is designed to be (hopefully) fairly secure. It uses local Unix sockets for authentication (can be used over SSH as well for remote terminals) which minimizes the access of any terminal. This site is not meant to be a finished system and a proper POS system would likely be a local client for this (it has an easy to use JSON API that allows integration fairly easily with local clients) as it allows for interactions with hardware such as pin pads and cash drawers more easily. I am also not huge on front end development so please excuse the lack of styling.</p>
         <br>
-        <p>All the source code for this site is available on Github: </p><a href="https://github.com/finlaywashere/POSServer">Java Server</a><a href="https://github.com/finlaywashere/POSSite">JavaScript Client</a>
+        <p>All the source code for this site is available on Github: </p><br>
+        <a href="https://github.com/finlaywashere/POSServer">Java Server</a><br>
+        <a href="https://github.com/finlaywashere/POSSite">JavaScript Client</a>
         <p>The demo below is setup to not require a password</p>
         <a href="pos.html">A demo can be found here!</a>
     </body>
