--- a/pos.html
+++ b/pos.html
@@ -7,7 +7,7 @@
             }
             .float {
                 position: absolute;
-                margin-top: 10%;
+                margin-top: 250px;
                 top: 0;
             }
         </style>
