--- a/pos.html
+++ b/pos.html
@@ -15,14 +15,20 @@
                 text-align: center;
             }
             div {
-                border: 2px solid black;
+                border: 1px solid black;
                 border-radius: 5px;
+                background-image: linear-gradient(#DABECA, #CDA5A8);
                 padding: 5px;
                 text-align: left;
                 width: 50%;
             }
             body {
                 text-align: center;
+                background-image: linear-gradient(#E3D8F1, #DABECA);
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
             input, div button, select {
                 float: right;
