--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             .section {
                 border: 1px solid black;
                 border-radius: 5px;
-                background-image: linear-gradient(#DABECA, #CDA5A8);
+                background-image: linear-gradient(#6188B8, #7EB2DD);
             }
             .section p, a {
                 margin-left: 20px;
@@ -20,23 +20,8 @@
             .nooffset {
                 margin-left: 0px;
             }
-            .c1 {
-                color: #E3D8F1;
-            }
-            .c2 {
-                color: #DABECA;
-            }
-            .c3 {
-                color: #BF8B85;
-            }
-            .c4 {
-                color: #AD8A64;
-            }
-            .c5 {
-                color: #5D5F71;
-            }
             body {
-                background-image: linear-gradient(#E3D8F1, #DABECA);
+                background-image: linear-gradient(#6188B8, #445E93);
             }
         </style>
     </head>
