--- a/pos.html
+++ b/pos.html
@@ -17,14 +17,14 @@
             div {
                 border: 1px solid black;
                 border-radius: 5px;
-                background-image: linear-gradient(#DABECA, #CDA5A8);
+                background-image: linear-gradient(#6188B8, #7EB2DD);
                 padding: 5px;
                 text-align: left;
                 width: 50%;
             }
             body {
                 text-align: center;
-                background-image: linear-gradient(#E3D8F1, #DABECA);
+                background-image: linear-gradient(#6188B8, #445E93);
                 top: 0;
                 left: 0;
                 width: 100%;
